# ChessEngine

./: CMakeLists.txt  ChessEngine.drawio  Common.h  main.cpp
Board/: Board.cpp  Board.h
Data/: default_board.csv
Move/: Move.cpp  Move.h
Piece/: Piece.cpp  Piece.h
Piece/Pieces/Bishop/: Bishop.cpp  Bishop.h
Piece/Pieces/King/: King.cpp  King.h
Piece/Pieces/Knight/: Knight.cpp  Knight.h
Piece/Pieces/Pawn/: Pawn.cpp  Pawn.h
Piece/Pieces/Queen/: Queen.cpp  Queen.h
Piece/Pieces/Rook/: Rook.cpp  Rook.h
Position/: Position.cpp  Position.h
Tests/: PieceTest.cpp
